crates/db-read-lockdown/tests/ui/read_conn_no_execute.rs
fn main() {
    fn proves(c: &db_read::ReadConn<'_>) {
        c.execute("UPDATE x SET y = 1", []);
    }
    let _ = proves;
}
